--- a/README
+++ b/README
@@ -1,4 +1,12 @@
-This is the README file for the Rivendell package.
+## Rivendell Radio Automation for Raspberry Pi Hardware
+
+Welcome to the github for the Rivendell on Raspberry Pi project. This release has no official affiliation with the official Rivendell software. We aim to provide a stable release for those who wish to use the software on Raspberry Pi hardware. We will be merging much of the official code as possible. This repository's changes will be based on running the system reliably on the Raspberry Pi hardware and the official Raspbian distribution. The packages and images we provide come with no guarenteed or warranty. They are provide as is.
+
+Please see the releases page for the latest Debian update packages.
+
+***
+
+## This is the README for the Rivendell package.
 
 This software comes with ABSOLUTELY NO WARRANTY. See the file COPYING for
 details.
